# drift-diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflow/: python-app.yml
.github/workflows/: lint.yml  python-app.yml
docs/manuscript/: main.tex
docs/sfn/: sfn-2025.tex
docs/slides/: slides-04MAR2025.tex  zotero.bib
drift_diffusion/: __init__.py
drift_diffusion/model/: __init__.py  drift_diffusion_model.py  pdf.py
drift_diffusion/sim/: __init__.py  sim.py
drift_diffusion/tests/: __init__.py  test_model.py  test_sim.py
examples/: 01-sim-drift-diffusion.ipynb  02-nguyen-2020-dataset.ipynb  03-fit-drift-diffusion.ipynb  03-rat195-reference-plots.ipynb  03-rat196-reference-plots.ipynb  03-reinagel-2013-dataset.ipynb  04-fit-drift-diffusion.ipynb  05-learn-pyddm.ipynb  06-mle-hessian.ipynb  07-navarro-2009-pdf.ipynb  08-parameter-recovery.ipynb  09-mixture-distributions.ipynb  10-fit-mixture-distributions.ipynb  11-delta-method.ipynb  12-mle-covariates.ipynb  13-fisher-information.ipynb  14-neurodinner-slides.ipynb  14-nguyen.ipynb  14-sfn-ar1.ipynb  15-sfn-simulations.ipynb  nguyen-2020-dataset.ipynb  utils.py
figures/: fig01.ipynb  fig01.py  fig02.ipynb  fig02.py  fig02to04.py  fig02to4.ipynb  fig03.ipynb  fig03.py  fig05to06.ipynb  fig05to06.py  fig06.ipynb  tab01.ipynb  tab01.py
figures/datasets/: Rat195Vectors_241025.mat  Rat196Vectors_241025.mat
figures/results/: config.json  ddm-fit-by-day.csv  ddm-fit-by-trial.csv  ddm-splines-by-day.csv  ddm-splines-covs.npy  ddm-splines-params.npy  sim-coherence-covs.csv  sim-coherence-params.csv  sim-constant-covs.csv  sim-constant-params.csv  sim-iid-covs.csv  sim-iid-params.csv  tab-mle-vs-mcmc.csv
latex/: slides-04MAR2025.tex  zotero.bib
